--- a/back_end/package.json
+++ b/back_end/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.5.2",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "fast-csv": "^4.3.6",
+    "nodemon": "^3.0.1",
+    "prisma": "^5.5.2"
   }
 }
